Fix ugly admin links on mobile.

--- a/themes/oslo2015/scss/modules/button.scss
+++ b/themes/oslo2015/scss/modules/button.scss
@@ -1,6 +1,6 @@
 input[type="submit"],
 .view-id-frontpage .views-row a,
-button,
+.page-content button,
 .theme_btn {
   background: none;
   border: 2px solid #000000;
